objects/SVMX_PS_Record_Update_Request__c.object
<CustomObject>
    <label>Record Update Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Record Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Update Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SVMX_PS_Status__c</fullName>
        <description>Status of Record Update Request</description>
        <inlineHelpText>Status of Record Update Request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related account record for account request</description>
        <inlineHelpText>Related account record for account request</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Record Update Requests</relationshipLabel>
        <relationshipName>Record_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related account record for Location request</description>
        <inlineHelpText>Related account record for Location request</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Record Update Requests</relationshipLabel>
        <relationshipName>Record_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Change_Field__c</fullName>
        <description>Denotes the changes required for a field</description>
        <inlineHelpText>Denotes the changes required for a field</inlineHelpText>
        <label>Field Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that submitted request</description>
        <inlineHelpText>User that submitted request</inlineHelpText>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_To_Email__c</fullName>
        <description>Email address for the regional team that will be updating the record details in SAP</description>
        <inlineHelpText>Email address for the regional team that will be updating the record details in SAP</inlineHelpText>
        <label>Send To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_IP_Serial_Num__c</fullName>
        <description>Installed Product Serial Number</description>
        <inlineHelpText>Installed Product Serial Number</inlineHelpText>
        <label>Installed Product Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Loc_SAP_Ext_ID__c</fullName>
        <description>Location SAP External ID</description>
        <inlineHelpText>Location SAP External ID</inlineHelpText>
        <label>Location SAP External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Acct_SAP_Cust_Num__c</fullName>
        <description>Account SAP Customer Number</description>
        <inlineHelpText>Account SAP Customer Number</inlineHelpText>
        <label>Account SAP Customer Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related account record for Installed Product request</description>
        <inlineHelpText>Related account record for Installed Product request</inlineHelpText>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Record Update Requests</relationshipLabel>
        <relationshipName>Record_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Submitted_Status_Date_Time__c</fullName>
        <description>Updates Submitted Status Date/Time to (now)</description>
        <inlineHelpText>Updates Submitted Status Date/Time to (now)</inlineHelpText>
        <label>Submitted Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>SVMX_PS_Account</fullName>
        <active>true</active>
        <label>SVMX PS - Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMX_PS_Location</fullName>
        <active>true</active>
        <label>SVMX PS - Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMX_PS_Installed_Product</fullName>
        <active>true</active>
        <label>SVMX PS - Installed Product</label>
    </recordTypes>
</CustomObject>